# wasm-envoy-proxy

./: .gitignore  Cargo.toml  README.md  SETUP.md
hack/: PotatoService.thrift  docker-compose.yaml
hack/auth/: Dockerfile  app.py  private_key.pem  public_key.pem  pyproject.toml  thriftParser.py
hack/client/: Dockerfile  main.py  pyproject.toml
hack/envoy/: envoy.yaml
hack/service/: Dockerfile  Makefile  app.py  pyproject.toml  util.py
src/: lib.rs  main.rs
