[package]
name = "wasm-envoy-proxy"
version = "0.1.0"
authors = ["David Illing"]
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
jwt-simple = "0.12.12"
log = "0.4.26"
proxy-wasm = "0.2.2"
serde = "1.0.219"
serde_json = "1.0.140"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
